# dataqual

./: .gitignore  CLAUDE.md  README.md  dataqual.config.yaml  pyproject.toml
dataqual/: __main__.py  cli.py  config.py
dataqual/checks/: compare.py  duplicates.py  missing.py  outliers.py  types.py
dataqual/readers/: csv_reader.py  excel_reader.py  postgres_reader.py
dataqual/report/: html_report.py  json_report.py  terminal_report.py
tests/: test_cli.py  test_compare.py  test_config.py  test_duplicates.py  test_excel_reader.py  test_html_report.py  test_json_report.py  test_missing.py  test_outliers.py  test_postgres_reader.py  test_types.py
